# PIRTDICA

./: .gitignore  .replit  baseline_minutes.py  baseline_minutes_by_depth.csv  build_dva.py  build_player_archetypes.py  capture_charts.py  compute_depth_ranks.py  detect_rotation_changes.py  dfs_nba.db  dfs_players.csv  dfs_players.py  dfs_players_late.csv  dfs_players_valued.csv  estimate_ownership.py  etl_game_foul_environment.py  etl_referee_stats_agg.py  generate_house_lineup.py  main.py  manual_injuries.py  matchup_engine.py  monte_carlo_optimizer.py  optimize_fanduel.py  ownership_projections.csv  physical_matchups.py  prop_recommendations.csv  pyproject.toml  query_game_foul_diff.py  replit.md  requirements.txt  run_daily_update.py  salary_tier_volatility.py  score_contest.py  scrape_depth_charts.py  scrape_dvp.py  scrape_espn_injuries.py  scrape_foul_rates.py  scrape_fta_ownership.py  scrape_game_logs.py  scrape_game_odds.py  (+22 more)
analysis/: player_value.py
articles/: feb22_picks.txt  feb23_picks.txt  feb24_picks.txt  feb25_picks.txt  feb26_picks.txt  feb28_picks.txt
attached_assets/: Pasted--First-The-Rule-of-Identity-Cosmetics-Cosmetics-should-_1771194517473.txt  Pasted--Good-catch-The-fact-that-you-re-thinking-about-this-no_1770941917407.txt  Pasted--select-name-class-DropDown-select-4pIg9-option-value-1_1769723361307.txt  Pasted-All-concepts-assume-White-background-Black-primary-vect_1770997667912.txt  Pasted-Basketball-positions-Basketball-positions-refer-to-the-_1771373736620.txt  Pasted-Big-picture-one-sentence-Minutes-rates-give-you-the-exp_1769790428974.txt  (+24 more)
(+32 files in other folders)
