[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "backend>=0.2.4.1",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nba-api>=1.11.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pulp>=3.3.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
